tooltipster doesnt seem to work, scrapped; info box object completed.

--- a/hoverbox.html
+++ b/hoverbox.html
@@ -2,7 +2,7 @@
     <head>
     </head>
     <body>
-        <div class="hover-box" style="opacity: 100; bottom: 100%; display: none;">
+        <div class="hover-box">
             <table>
                 <tr id="name-row">
                     <td>Name: </td>
