re-added close button

--- a/hoverbox.html
+++ b/hoverbox.html
@@ -1,13 +1,20 @@
 <html>
-    <head>
-    </head>
     <body>
-        <div class="hover-box">
+        <div class="hover-box" style="opacity: 100; bottom: 100%; display: none;">
             <table>
+                <tr id="close-row">
+                    <td>
+                        <a>
+                            <img src="chrome-extension://ggdfanhacjfohgndgcpnpmkhabjjeief/close.png" alt="X" class="close-button">
+                        </a>
+                    </td>
+                </tr>
                 <tr id="name-row">
                     <td>Name: </td>
                     <td>
-                        <input isvalid="false" id="crypto-search-entry" autocomplete="off" spellcheck="false" dir="auto" style="position: relative; vertical-align: top;">
+                        <span class="twitter-typeahead" style="position: relative; display: inline-block;">
+                            <input isvalid="false" id="crypto-search-entry0" autocomplete="off" spellcheck="false" dir="auto" style="position: relative; vertical-align: top;">
+                        </span>
                     </td>
                 </tr>
                 <tr id="date-row">
