changed the css around a bit

--- a/hoverbox.html
+++ b/hoverbox.html
@@ -1,29 +1,29 @@
 <html>
     <body>
         <div class="hover-box" style="opacity: 100; bottom: 100%; display: none;">
-            <table>
-                <tr id="close-row">
+            <table class="hover-box-table">
+                <tr class="close-row">
                     <td>
                         <a>
                             <img src="chrome-extension://ggdfanhacjfohgndgcpnpmkhabjjeief/close.png" alt="X" class="close-button">
                         </a>
                     </td>
                 </tr>
-                <tr id="name-row">
-                    <td>Name: </td>
+                <tr class="name-row valid-entry">
+                    <td class="name-title">Name: </td>
                     <td>
                         <span class="twitter-typeahead" style="position: relative; display: inline-block;">
                             <input isvalid="false" id="crypto-search-entry0" autocomplete="off" spellcheck="false" dir="auto" style="position: relative; vertical-align: top;">
                         </span>
                     </td>
                 </tr>
-                <tr id="date-row">
-                    <td>Date: </td>
-                    <td>
+                <tr class="date-row valid-entry">
+                    <td class="date-title">Date: </td>
+                    <td class="date-entry">
                         <span isvalid="false" contenteditable="true">Date N/A</span>
                     </td>
                 </tr>
-                <tr id="price-row">
+                <tr class="price-row">
                     <td>Price: </td>
                     <td>
                         <span isvalid="true">$0.00</span>
