Began changing to modify the context menu (aka the right click menu) instead of creating a hoverable element

--- a/hoverbox.html
+++ b/hoverbox.html
@@ -1,5 +1,6 @@
 <html>
     <body>
+        
         <div class="hover-box" style="opacity: 100; bottom: 100%; display: none;">
             <table class="hover-box-table">
                 <tr class="close-row">
@@ -27,6 +28,11 @@
                     <td>Price: </td>
                     <td>
                         <span isvalid="true">$0.00</span>
+                    </td>
+                </tr>
+                <tr class="status-bar">
+                    <td>
+                        
                     </td>
                 </tr>
             </table>
