removed event handlers that are no longer needed

--- a/hoverbox.html
+++ b/hoverbox.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         
-        <div class="hover-box" style="opacity: 100; bottom: 100%; display: none;">
+        <div class="hover-box">
             <table class="hover-box-table">
                 <tr class="close-row">
                     <td>
