Began adding setting defaults

--- a/hoverbox.html
+++ b/hoverbox.html
@@ -36,6 +36,9 @@
                     </td>
                 </tr>
             </table>
+            
+            <button class="save-default" title="Set the current currency as the default">Save as Default</button>
         </div>
+        
     </body>
 </html>
